--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,8 +10,11 @@
   "license": "GPL2",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-autoprefixer": "^2.0.0",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-sass": "^0.8.1",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "install": "^0.1.7",
+    "npm": "^2.1.9"
   }
 }
