--- a/front-end/bower.json
+++ b/front-end/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "normalize.css": "~3.0.2",
     "angular": "~1.3.4",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "angular-animate": "~1.3.4"
   }
 }
